Fix layout bug - 2

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -52,7 +52,7 @@
     top: 0;
     right: 0;
     z-index: 99;
-    min-width: 50%;
+    min-width: 55%;
     height: 100vh;
     border-radius: 0;
     overflow: auto;
@@ -89,12 +89,12 @@
   .menu__overlay {
     position: static;
     color: var(--white-color);
-    font-size: 1.1rem;
+    font-size: 1rem;
     background-color: transparent;
     border-radius: none;
     padding: 0;
     margin-top: 0;
-    opacity: 0.8;
+    opacity: 0.7;
     transition: all 300ms ease-in-out;
   }
 
@@ -142,7 +142,7 @@
     display: block;
     height: inherit;
     overflow: auto;
-    padding: 2rem 2rem 10rem 2rem;
+    padding: 2rem 4rem 10rem 4rem;
   }
   .personal-info__bio {
     flex-direction: column;
@@ -176,8 +176,50 @@
 }
 
 @media screen and (max-width: 600px) {
+  .content__about,
+  .content__curriculum,
+  .content__contact {
+    display: block;
+    height: inherit;
+    overflow: auto;
+    padding: 2rem 2rem 5rem 2rem;
+  }
+
+  .aside__user-info {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    min-height: 100%;
+    width: 100%;
+    background-color: var(--main-color);
+    color: var(--white-color);
+    gap: 2.5rem;
+  }
+  .user-info__name {
+    font-size: 1.2rem;
+  }
+  .user-info__job {
+    font-size: 0.8rem;
+  }
+  .menu__overlay {
+    font-size: 0.9rem;
+  }
+  .menu__link--active .menu__overlay {
+    opacity: 1;
+    font-weight: bold;
+    font-size: 1.1rem;
+  }
+
+  .user-info__btns {
+    width: 65%;
+  }
+  .user-info__btn {
+    font-size: 1rem;
+  }
+
   .page__name {
-    font-size: 2rem;
+    font-size: 2.3rem;
   }
 
   .services__container {
@@ -195,25 +237,6 @@
     gap: 3rem;
   }
 
-  .curriculum__title {
-    font-size: 1.5rem;
-  }
-  .curriculum__title::after {
-    top: 0.5rem;
-    left: 12rem;
-    content: "";
-    width: 5.5rem;
-    height: 2.2rem;
-    background-image: -webkit-repeating-radial-gradient(
-      center center,
-      var(--main-color),
-      var(--main-color) 1px,
-      transparent 0px,
-      transparent 100%
-    );
-    background-size: 0.4rem 0.4rem;
-    opacity: 0.3;
-  }
   .contact__container {
     flex-direction: column;
     gap: 2rem;
@@ -232,6 +255,6 @@
   .form__input--textarea {
     resize: none;
     width: 100%;
-    min-height: 20vh;
+    min-height: 25vh;
   }
 }
