--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ body {
   text-align: center;
   align-items: center;
   min-height: 100%;
-  min-width: 19rem;
+  width: 100%;
   background-color: var(--main-color);
   color: var(--white-color);
   gap: 3rem;
@@ -218,7 +218,6 @@ body {
   border: 2px solid var(--white-color);
   border-radius: 2rem;
   padding: 0.8rem 0;
-  margin-bottom: 2.5rem;
   box-shadow: 0 10px 10px -8px rgba(0, 0, 0, 0.25);
   transition: background 300ms ease-in-out;
   cursor: pointer;
@@ -236,8 +235,8 @@ body {
 }
 
 .user-info__footer {
-  position: absolute;
-  bottom: 1rem;
+  /* position: relative; */
+  /* bottom: 10vh; */
   font-size: 0.8rem;
 }
 
@@ -414,11 +413,11 @@ body {
 .curriculum__title::after {
   position: absolute;
   top: 1.5rem;
-  left: 19rem;
+  left: 9.5rem;
   display: inline-block;
   content: "";
-  width: 9.5rem;
-  height: 2.2rem;
+  width: 5.5rem;
+  height: 2rem;
   background-image: -webkit-repeating-radial-gradient(
     center center,
     var(--main-color),
@@ -600,7 +599,7 @@ body {
 .soft-skills__list {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 .soft-skills__header {
